--- a/Pulse/Pulse.Base/Pulse.Base.csproj
+++ b/Pulse/Pulse.Base/Pulse.Base.csproj
@@ -36,12 +36,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dwm.cs" />
@@ -49,8 +54,12 @@
     <Compile Include="HttpUtility.cs" />
     <Compile Include="Picture.cs" />
     <Compile Include="IProvider.cs" />
+    <Compile Include="PictureManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Provider.cs" />
+    <Compile Include="ProviderConfigurationBase.cs" />
+    <Compile Include="ProviderConfigurationUserControlAttribute.cs" />
+    <Compile Include="ProviderManager.cs" />
+    <Compile Include="PictureSearch.cs" />
     <Compile Include="Translator.cs" />
     <Compile Include="WinAPI.cs" />
     <Compile Include="XmlSerializable.cs" />
