Updates for wallbase provider.  Wallbase now has custom settings: You can specify the view type (search, random, toplist), the dimensions of the image along with the exact/at least flag, order by, order by direction, and for regular searches (not random/toplist) an RGB color.  With the inclusion of the Exactly/At Least flag we don't need the Get Max Resolution check, thus the setting has been removed.
Also fixed a bug in the options window that did not allow you to save changes to the custom provider settings if no other options were changed (apply flag was not being set).

--- a/Pulse/Providers/wallbase/wallbase.csproj
+++ b/Pulse/Providers/wallbase/wallbase.csproj
@@ -36,6 +36,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,8 +45,13 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="WallbaseImageSearchSettings.cs" />
+    <Compile Include="WallbaseProviderPreferences.xaml.cs">
+      <DependentUpon>WallbaseProviderPreferences.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WallPicture.cs" />
     <Compile Include="Provider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -57,7 +63,14 @@
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Page Include="WallbaseProviderPreferences.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildBinPath)\Microsoft.WinFX.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
