--- a/Pulse/Providers/LogonBackground/LogonBackground.csproj
+++ b/Pulse/Providers/LogonBackground/LogonBackground.csproj
@@ -2,74 +2,63 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{53B10354-56C0-4440-BBB2-F1F0C330E120}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{1AF886CC-3BD0-4E02-AF67-5F7D6724B41E}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Pulse.Base</RootNamespace>
-    <AssemblyName>Pulse.Base</AssemblyName>
+    <RootNamespace>LogonBackground</RootNamespace>
+    <AssemblyName>LogonBackground</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\..\bin\Debug\Providers\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\bin\Release\Providers\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Security" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HttpUtility.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Pair.cs" />
-    <Compile Include="Providers\ActiveProviderInfo.cs" />
-    <Compile Include="GeneralHelper.cs" />
-    <Compile Include="Providers\IInputProvider.cs" />
-    <Compile Include="Providers\IOutputProvider.cs" />
-    <Compile Include="Pictures\Picture.cs" />
-    <Compile Include="Providers\IProvider.cs" />
-    <Compile Include="Pictures\PictureList.cs" />
-    <Compile Include="Pictures\PictureManager.cs" />
+    <Compile Include="OEMBackgroundManager.cs" />
+    <Compile Include="OEMBackgroundProvider.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\ProviderConfigurationBase.cs" />
-    <Compile Include="Providers\ProviderConfigurationUserControlAttribute.cs" />
-    <Compile Include="Providers\ProviderManager.cs" />
-    <Compile Include="Pictures\PictureSearch.cs" />
-    <Compile Include="SerializableDictionary.cs" />
-    <Compile Include="Translator.cs" />
-    <Compile Include="XmlSerializable.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Pulse.Base\Pulse.Base.csproj">
+      <Project>{53B10354-56C0-4440-BBB2-F1F0C330E120}</Project>
+      <Name>Pulse.Base</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
