-Added start of a National Geographic provider.  It pulls pictures from http://ngm.nationalgeographic.com/wallpaper/download right now, but they seem to use a common xml format for many of their pages so others should be doable with a Settings page to help out. -Added a Local Directory provider.  Currently it only searches the current users "Pictures" directory for "jpg;jpeg;png;bmp".  There is no settings screen yet, but I'll add one. -Made some tweaks to the NASA provider, Picture Manager, and other classes.  Found a bug where the hashcode for PictureSearch was not including the current provider in the calculation.  This meant that if you switch between providers and both providers had no settings and the search term did not change then it would just reuse your previous search results.  Current provider name is now used.

--- a/Pulse/Providers/NationalGeographicWallpapers/NationalGeographicWallpapers.csproj
+++ b/Pulse/Providers/NationalGeographicWallpapers/NationalGeographicWallpapers.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{624D0297-58E5-4EA7-9FDC-8FA03E82770C}</ProjectGuid>
+    <ProjectGuid>{9FCC0B58-0972-47BF-90CF-4BCEA840C49E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LocalDirectory</RootNamespace>
-    <AssemblyName>LocalDirectory</AssemblyName>
+    <RootNamespace>NationalGeographicWallpapers</RootNamespace>
+    <AssemblyName>NationalGeographicWallpapers</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -43,9 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LocalDirectorySettings.cs" />
+    <Compile Include="NationalGeographicProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Provider.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Pulse.Base\Pulse.Base.csproj">
