Fixed a number of small bugs Added in much (much) better logging.  There isn't a method for setting the logging level, but that will be added down the road in Settings.  Right now it defaults to warnings or greater.

--- a/Pulse/Pulse.Base/Pulse.Base.csproj
+++ b/Pulse/Pulse.Base/Pulse.Base.csproj
@@ -53,6 +53,7 @@
     <Compile Include="HttpUtility.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Log.cs" />
     <Compile Include="Pair.cs" />
     <Compile Include="Providers\ActiveProviderInfo.cs" />
     <Compile Include="GeneralHelper.cs" />
