--- a/Pulse/Providers/GoogleImages/GoogleImages.csproj
+++ b/Pulse/Providers/GoogleImages/GoogleImages.csproj
@@ -35,23 +35,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GoogleImageProviderPreferences.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GoogleImageProviderPreferences.Designer.cs">
+      <DependentUpon>GoogleImageProviderPreferences.cs</DependentUpon>
+    </Compile>
     <Compile Include="GoogleImageSearchSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider.cs" />
-    <Compile Include="ProviderPreferences.xaml.cs">
-      <DependentUpon>ProviderPreferences.xaml</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Pulse.Base\Pulse.Base.csproj">
@@ -60,10 +60,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="ProviderPreferences.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <EmbeddedResource Include="GoogleImageProviderPreferences.resx">
+      <DependentUpon>GoogleImageProviderPreferences.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
