--- a/Pulse/Providers/WallpaperSetter/WallpaperSetter.csproj
+++ b/Pulse/Providers/WallpaperSetter/WallpaperSetter.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AppleScriptSlim">
+      <HintPath>..\..\..\..\AppleScriptSlim.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OSXWallpaperSetter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WallpaperSetterProvider.cs" />
     <Compile Include="WinAPI.cs" />
