--- a/Pulse/Providers/wallbase/wallbase.csproj
+++ b/Pulse/Providers/wallbase/wallbase.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -49,11 +50,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="WallbaseImageSearchSettings.cs" />
-    <Compile Include="WallbaseProviderPreferences.xaml.cs">
-      <DependentUpon>WallbaseProviderPreferences.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Provider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WallbaseProviderPrefs.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="WallbaseProviderPrefs.Designer.cs">
+      <DependentUpon>WallbaseProviderPrefs.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Pulse.Base\Pulse.Base.csproj">
@@ -63,10 +67,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="WallbaseProviderPreferences.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <EmbeddedResource Include="WallbaseProviderPrefs.resx">
+      <DependentUpon>WallbaseProviderPrefs.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.WinFX.targets" />
