--- a/Pulse/Pulse.Base/Pulse.Base.csproj
+++ b/Pulse/Pulse.Base/Pulse.Base.csproj
@@ -36,18 +36,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HttpUtility.cs">
@@ -55,6 +50,7 @@
     </Compile>
     <Compile Include="Log.cs" />
     <Compile Include="Pair.cs" />
+    <Compile Include="ProviderPlatformAttribute.cs" />
     <Compile Include="Providers\ActiveProviderInfo.cs" />
     <Compile Include="GeneralHelper.cs" />
     <Compile Include="Providers\IInputProvider.cs" />
@@ -64,7 +60,9 @@
     <Compile Include="Pictures\PictureList.cs" />
     <Compile Include="Pictures\PictureManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\ProviderConfigurationBase.cs" />
+    <Compile Include="Providers\ProviderConfigurationBase.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Providers\ProviderConfigurationUserControlAttribute.cs" />
     <Compile Include="Providers\ProviderManager.cs" />
     <Compile Include="Pictures\PictureSearch.cs" />
