Lots of changes. Most importantly we now have Wallbase.cc authentication!  With this comes two new options: 1) you can now reference a favorites collection.  So if you want to create that perfect collection of wallpapers and only see those ones you can!  2) You can now use NSFW.
I'm working on adding some configuration options to the output providers.  With the wallpaper setter you can now choose a custom background color.  You can also choose the wallpaper fit (tiled, center, fit, tile, etc...).  These settings are only tested to a limited extent but seem to work.

I added a copy of AppleScriptSlim.dll to source control so you don't have to go and get it yoruself if you want to build the project.

--- a/Pulse/Providers/AeroGlassChanger/AeroGlassChanger.csproj
+++ b/Pulse/Providers/AeroGlassChanger/AeroGlassChanger.csproj
@@ -52,6 +52,10 @@
       <Project>{53B10354-56C0-4440-BBB2-F1F0C330E120}</Project>
       <Name>Pulse.Base</Name>
     </ProjectReference>
+    <ProjectReference Include="..\WinAPI\WinAPI.csproj">
+      <Project>{B60087E5-76FE-462F-BDC2-BF25BB01F7E6}</Project>
+      <Name>WinAPI</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
