--- a/Pulse/Providers/WallpaperSetter/WallpaperSetter.csproj
+++ b/Pulse/Providers/WallpaperSetter/WallpaperSetter.csproj
@@ -35,11 +35,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AppleScriptSlim">
-      <HintPath>..\..\..\..\AppleScriptSlim.dll</HintPath>
+    <Reference Include="AppleScriptSlim, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\References\AppleScriptSlim.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -49,12 +51,16 @@
     <Compile Include="OSXWallpaperSetter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WallpaperSetterProvider.cs" />
-    <Compile Include="WinAPI.cs" />
+    <Compile Include="WallpaperSetterSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Pulse.Base\Pulse.Base.csproj">
       <Project>{53B10354-56C0-4440-BBB2-F1F0C330E120}</Project>
       <Name>Pulse.Base</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WinAPI\WinAPI.csproj">
+      <Project>{B60087E5-76FE-462F-BDC2-BF25BB01F7E6}</Project>
+      <Name>WinAPI</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
