--- a/Pulse/Pulse.Base/Pulse.Base.csproj
+++ b/Pulse/Pulse.Base/Pulse.Base.csproj
@@ -51,7 +51,8 @@
     </Compile>
     <Compile Include="Log.cs" />
     <Compile Include="Pair.cs" />
-    <Compile Include="ProviderPlatformAttribute.cs" />
+    <Compile Include="Pictures\PictureDownload.cs" />
+    <Compile Include="Providers\ProviderPlatformAttribute.cs" />
     <Compile Include="Providers\ActiveProviderInfo.cs" />
     <Compile Include="GeneralHelper.cs" />
     <Compile Include="Providers\IInputProvider.cs" />
@@ -61,8 +62,14 @@
     <Compile Include="Pictures\PictureList.cs" />
     <Compile Include="Pictures\PictureManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\ProviderConfigurationBase.cs">
+    <Compile Include="Providers\ProviderConfigurationAttribute.cs" />
+    <Compile Include="Providers\IProviderConfiguration.cs" />
+    <Compile Include="Providers\ProviderConfigurationClassAttribute.cs" />
+    <Compile Include="Providers\ProviderConfigurationPropertyGrid.cs">
       <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Providers\ProviderConfigurationPropertyGrid.Designer.cs">
+      <DependentUpon>ProviderConfigurationPropertyGrid.cs</DependentUpon>
     </Compile>
     <Compile Include="Providers\ProviderConfigurationUserControlAttribute.cs" />
     <Compile Include="Providers\ProviderManager.cs" />
@@ -72,6 +79,11 @@
     <Compile Include="Settings.cs" />
     <Compile Include="Translator.cs" />
     <Compile Include="XmlSerializable.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Providers\ProviderConfigurationPropertyGrid.resx">
+      <DependentUpon>ProviderConfigurationPropertyGrid.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
