I've made a number of tweaks, one major bug fix.
Bug Fix:
There was a major bug in Wallbase.cc searching (not sure when it came about) where it was ignoring keywords!  This has been fixed.

Tweaks:
1) Wallbase and Google Images now use Referrer information when downloading images.  This doesn't really change anything for wallbase but it helps the Google Images provider to download images with fewer dud's.
2) The Download Manager and Picture Downloading now uses a temp file, this way if you get cut off part way through a download you won't end up with a dud file.  The Download Manger class has also been streamlined for the upcoming visual download manager which will let you see what is in the queue and what has already been downloaded.  Download Manager also now handles retries on failures

--- a/Pulse/Providers/Piler/Piler.csproj
+++ b/Pulse/Providers/Piler/Piler.csproj
@@ -47,12 +47,15 @@
   <ItemGroup>
     <Compile Include="PilerProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WinAPI.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Pulse.Base\Pulse.Base.csproj">
       <Project>{53B10354-56C0-4440-BBB2-F1F0C330E120}</Project>
       <Name>Pulse.Base</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WinAPI\WinAPI.csproj">
+      <Project>{b60087e5-76fe-462f-bdc2-bf25bb01f7e6}</Project>
+      <Name>WinAPI</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
