I'm working to expand the underlying setup of input/output providers.  I want output providers to be able to request additional pictures if needed and not just work with a single one.  Output providers now handle requestingg however many pictures they need.
Also instead of a random provider being chosen for each picture request (when more then one is selected), now a random picture is chosen out of all active providers.

Part of the plan for allowing output providers to select their own pictures is that down the road when multi-monitor support is added you will be able to say "I want wallpapers from this provider on this screen", and the output providers will be able to do it.

I also added icons for all input providers.  These icons show up in the input provider drop down list and also in the list of active providers.

--- a/Pulse/Pulse.Base/Pulse.Base.csproj
+++ b/Pulse/Pulse.Base/Pulse.Base.csproj
@@ -52,8 +52,15 @@
     </Compile>
     <Compile Include="Log.cs" />
     <Compile Include="Pair.cs" />
+    <Compile Include="PictureBatch.cs" />
     <Compile Include="Pictures\DownloadQueue.cs" />
     <Compile Include="Pictures\PictureDownload.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Providers\ProviderIconAttribute.cs" />
     <Compile Include="Providers\ProviderPlatformAttribute.cs" />
     <Compile Include="Providers\ActiveProviderInfo.cs" />
     <Compile Include="GeneralHelper.cs" />
@@ -79,13 +86,27 @@
     <Compile Include="PulseRunner.cs" />
     <Compile Include="SerializableDictionary.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="Status.cs" />
     <Compile Include="Translator.cs" />
     <Compile Include="XmlSerializable.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Providers\ProviderConfigurationPropertyGrid.resx">
       <DependentUpon>ProviderConfigurationPropertyGrid.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icon_downloading.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icon_small.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
