--- a/Pulse/Providers/GoogleImages/GoogleImages.csproj
+++ b/Pulse/Providers/GoogleImages/GoogleImages.csproj
@@ -52,6 +52,11 @@
     </Compile>
     <Compile Include="GoogleImageSearchSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Provider.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -64,6 +69,13 @@
     <EmbeddedResource Include="GoogleImageProviderPreferences.resx">
       <DependentUpon>GoogleImageProviderPreferences.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\googleImages.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
