--- a/Pulse/Providers/MediaRSS/MediaRSSProvider.csproj
+++ b/Pulse/Providers/MediaRSS/MediaRSSProvider.csproj
@@ -55,6 +55,11 @@
     </Compile>
     <Compile Include="MediaRSSSearchSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Provider.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -67,6 +72,13 @@
     <EmbeddedResource Include="MediaRSSProviderPreferences.resx">
       <DependentUpon>MediaRSSProviderPreferences.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rss.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
