--- a/Pulse/Pulse.Base/Pulse.Base.csproj
+++ b/Pulse/Pulse.Base/Pulse.Base.csproj
@@ -37,6 +37,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CodePlexNewReleaseChecker">
+      <HintPath>..\References\CodePlexNewReleaseChecker.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
