--- a/Pulse/PulseForm/PulseForm.csproj
+++ b/Pulse/PulseForm/PulseForm.csproj
@@ -90,6 +90,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BannedImageReview.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BannedImageReview.Designer.cs">
+      <DependentUpon>BannedImageReview.cs</DependentUpon>
+    </Compile>
     <Compile Include="DownloadMonitor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -131,6 +137,9 @@
     <Compile Include="PulseOptions.Designer.cs">
       <DependentUpon>PulseOptions.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="BannedImageReview.resx">
+      <DependentUpon>BannedImageReview.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DownloadMonitor.resx">
       <DependentUpon>DownloadMonitor.cs</DependentUpon>
     </EmbeddedResource>
