Wallpapers now change using the IActiveDesktop interface.  This allows for windows to fade/trandition the images as you would expect it too.
Providers can now be configured to run async.  This looks really nice now since AeroGlass has been configured to run async.  The wallpaper and color change happen at the same time now.

--- a/Pulse/Pulse.Base/Pulse.Base.csproj
+++ b/Pulse/Pulse.Base/Pulse.Base.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Providers\ProviderConfigurationUserControlAttribute.cs" />
     <Compile Include="Providers\ProviderManager.cs" />
     <Compile Include="Pictures\PictureSearch.cs" />
+    <Compile Include="Providers\ProviderRunsAsyncAttribute.cs" />
     <Compile Include="PulseRunner.cs" />
     <Compile Include="SerializableDictionary.cs" />
     <Compile Include="Settings.cs" />
