--- a/Pulse/Providers/WinAPI/WinAPI.csproj
+++ b/Pulse/Providers/WinAPI/WinAPI.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Desktop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WinAPI.cs" />
   </ItemGroup>
