--- a/Pulse/Pulse.Forms.UI/Pulse.Forms.UI.csproj
+++ b/Pulse/Pulse.Forms.UI/Pulse.Forms.UI.csproj
@@ -51,6 +51,12 @@
     <Compile Include="DownloadMonitor.Designer.cs">
       <DependentUpon>DownloadMonitor.cs</DependentUpon>
     </Compile>
+    <Compile Include="DownloadQueue.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="DownloadQueue.Designer.cs">
+      <DependentUpon>DownloadQueue.cs</DependentUpon>
+    </Compile>
     <Compile Include="PictureStatus.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -63,6 +69,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ProviderComboBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Pulse.Base\Pulse.Base.csproj">
@@ -73,6 +82,9 @@
   <ItemGroup>
     <EmbeddedResource Include="DownloadMonitor.resx">
       <DependentUpon>DownloadMonitor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DownloadQueue.resx">
+      <DependentUpon>DownloadQueue.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PictureStatus.resx">
       <DependentUpon>PictureStatus.cs</DependentUpon>
