--- a/Pulse/Providers/wallbase/wallbase.csproj
+++ b/Pulse/Providers/wallbase/wallbase.csproj
@@ -55,6 +55,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="WallbaseAccessDeniedException.cs" />
     <Compile Include="WallbaseImageSearchSettings.cs" />
     <Compile Include="Provider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
