Code for 0.6.7.3 (no feature changes)

--- a/Pulse/Providers/LocalDirectory/LocalDirectory.csproj
+++ b/Pulse/Providers/LocalDirectory/LocalDirectory.csproj
@@ -58,6 +58,7 @@
     <ProjectReference Include="..\..\Pulse.Base\Pulse.Base.csproj">
       <Project>{53B10354-56C0-4440-BBB2-F1F0C330E120}</Project>
       <Name>Pulse.Base</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
